--- a/_posts/2025-12-14-glossary.md
+++ b/_posts/2025-12-14-glossary.md
@@ -83,7 +83,7 @@ share: true
 
 ## 정의는 실용적으로
 
-“사람 + 시스템”이 같이 이해할 수 있어야 함
+“사람 + 시스템”이 같이 이해할 수 있어야 합니다.
 
 ### 나쁜 예시:
 > "매출을 의미한다"
@@ -149,15 +149,15 @@ share: true
 
 ## 성공의 조건
 
-✅ 컬럼에 붙어 있다  
-✅ 자주 쓰는 용어만 있다  
-✅ 승인된 용어만 공식이다  
-✅ 실제 업무에 쓰인다
+✅ 컬럼과 매핑이 가능하다.
+✅ 자주 쓰는 용어만 있다.  
+✅ 승인된 용어만 표준으로 활용한다.  
+✅ 실제 업무에 쓰인다.
 
 ---
 
 ## 마무리
 
-**적게 시작하고, 컬럼에 연결하고, 승인된 것만 유지하세요.**
+**작게 시작하고, 컬럼에 연결하고, 승인된 것만 유지하세요.**
 
 그러면 용어사전은 방치된 문서가 아닌, 매일 참조하는 살아있는 표준이 됩니다.
