--- a/_posts/2025-12-14-glossary.md
+++ b/_posts/2025-12-14-glossary.md
@@ -6,9 +6,8 @@ categories: dataplatform, metadata
 share: true
 ---
 
-# 용어사전, 처음부터 제대로 시작하는 법
 
-메타데이터 관리 시스템을 도입하면서 가장 먼저 만드는 것이 용어사전입니다. 하지만 대부분 이렇게 끝납니다.
+메타데이터 관리 시스템을 도입하면서 가장 먼저 만드는 것이 용어사전입니다.
 
 "열심히 만들었는데 아무도 안 봐요."
 
