--- a/_posts/2025-12-14-glossary.md
+++ b/_posts/2025-12-14-glossary.md
@@ -4,6 +4,8 @@ title: "용어사전, 처음부터 제대로 시작하는 법"
 date: 2025-12-14 01:00:00 +0900
 categories: dataplatform, metadata
 share: true
+toc: true
+toc_sticky: true
 ---
 
 
