--- a/_posts/2025-12-14-glossary.md
+++ b/_posts/2025-12-14-glossary.md
@@ -8,18 +8,18 @@ toc: true
 toc_sticky: true
 ---
 
-
-메타데이터 관리 시스템을 도입하면서 가장 먼저 만드는 것이 용어사전입니다.
+AI, RAG 기술의 활발한 도입과 활용으로 인해, 용어사전의 역할과 중요성이 높아지고 있다.
+하지만 실제 현장에서는 이런 고민을 한다.
 
 "열심히 만들었는데 아무도 안 봐요."
 
-왜 그럴까요?
+왜 그럴까?
 
 ---
 
 ## 가장 큰 실수: 문서처럼 접근하기
 
-많은 팀이 용어사전을 이렇게 시작합니다:
+용어사전을 만들 때 대부분 이렇게 시작한다.:
 
 - "전사 표준 용어사전을 만들자"
 - "모든 용어를 완벽하게 정의하자"
@@ -27,7 +27,7 @@ toc_sticky: true
 
 **결과는?** 몇 달 후 아무도 안 보는 방치된 문서.
 
-용어사전은 **관리 대상이 아니라 참조 기준**입니다.
+용어사전은 **관리 대상이 아니라 참조 기준**이다.
 
 ---
 
@@ -42,7 +42,7 @@ toc_sticky: true
 
 ### 2. 실제 컬럼에 연결하세요
 
-모든 용어는 이 질문에 답할 수 있어야 합니다:
+모든 용어는 이 질문에 답할 수 있어야 한다.:
 
 > "이 용어는 어떤 테이블의 어떤 컬럼인가?"
 
@@ -53,7 +53,7 @@ toc_sticky: true
 - **태그**: 분류/검색
 - **용어사전**: 정의/표준
 
-용어사전을 태그처럼 쓰면 실패합니다.
+용어사전을 태그처럼 쓰면 실패한다.
 
 ---
 
@@ -84,7 +84,7 @@ toc_sticky: true
 
 ## 정의는 실용적으로
 
-“사람 + 시스템”이 같이 이해할 수 있어야 합니다.
+“사람 + 시스템”이 같이 이해할 수 있어야 한다.
 
 ### 나쁜 예시:
 > "매출을 의미한다"
@@ -111,7 +111,7 @@ toc_sticky: true
 - **Approved**: 공식 용어
 - **Deprecated**: 사용 중단
 
-**"Approved만 공식"** 규칙을 명확히 하세요.
+**"Approved만 공식"** 규칙을 명확히 한다.
 
 ### 책임자 지정
 각 용어마다 Owner 1명 지정 필수.
@@ -161,4 +161,4 @@ toc_sticky: true
 
 **작게 시작하고, 컬럼에 연결하고, 승인된 것만 유지하세요.**
 
-그러면 용어사전은 방치된 문서가 아닌, 매일 참조하는 살아있는 표준이 됩니다.
+그러면 용어사전은 방치된 문서가 아닌, 매일 참조하는 살아있는 데이터 표준으로 자리매김 할 수 있다.
