--- a/_posts/2025-12-13-RAG_ex.md
+++ b/_posts/2025-12-13-RAG_ex.md
@@ -2,7 +2,7 @@
 layout: single
 title: "Vector DB 없이 RAG를 구성한 사례"
 date: 2025-12-13 01:00:00 +0900
-categories: RAG, LLM, AI서비스
+categories: RAG LLM AI서비스
 share: true
 ---
 
