--- a/_posts/2025-12-18-sso.md
+++ b/_posts/2025-12-18-sso.md
@@ -33,12 +33,9 @@ toc_sticky: true
 
 ## 실습: Keycloak 설치
 
-IdP의 작동 원리를 더 깊게 이해하고자 대표적인 오픈소스 솔루션인 **Keycloak**을 실행해보았다.
+IdP의 작동 원리를 더 깊게 이해하고자 대표적인 오픈소스 솔루션인 **Keycloak**을 Docker 환경에서 실행해보았다. 직접 해보니 핵심 설정값 2가지에 대해 이해할 수 있었다.
 
-- **Keycloak이란?**: Red Hat에서 후원하는 오픈소스 ID 및 액세스 관리(IAM) 솔루션
-
-- 서비스 등록해보면서 핵심 설정값 2가지에 대해 이해할 수 있었다.
-
+### 서비스 등록 시 핵심 설정 값 2가지
 > 보안의 핵심: 만약 이 주소를 아무나 설정할 수 있다면, 해커가 자신의 사이트로 인증 토큰을 가로챌 수 있다. IdP는 오직 여기에 등록된 주소로만 토큰을 보내준다.
 
   - 1) Base URL: 서비스의 메인 주소 (예: https://myapp.com) IdP가 해당 서비스로 이동할 때 기준이 되는 주소로 활용
