--- a/_posts/2025-12-18-sso.md
+++ b/_posts/2025-12-18-sso.md
@@ -8,6 +8,10 @@ toc: true
 toc_sticky: true
 ---
 
+## Intro
+
+- AI 서비스가 쏟아져 나오고 있다. AI 서비스도 회사 내에서 사용하기 위해서는 SSO 인증을 연결 해야한다. 그래서 정리해보는 페이지:)
+
 ## SSO(Single Sign On)
 
 - 한번의 인증 과정으로 허가된 서비스에 추가 로그인 없이 접근
